fixed overflow problem and improved button positioning

--- a/modules/panel/client/css/panel.css
+++ b/modules/panel/client/css/panel.css
@@ -656,7 +656,7 @@ input.concept-title.admin {
 .maximized .learning-buttons {
     position: relative;
     left: 0;
-    bottom: -15px;
+    bottom: 0px;
     padding: 0 10px;
     font-size: 10px;
     /*border: 1px solid;*/
